[gd_scene load_steps=25 format=3 uid="uid://bhfet0gogfii"]

[ext_resource type="Script" uid="uid://c4ccbn8061h3h" path="res://End of Run Summary.gd" id="1"]
[ext_resource type="Theme" uid="uid://fcmkyi7fg3b5" path="res://Theme/Theme_Very_Large_Font.tres" id="2"]
[ext_resource type="Theme" uid="uid://dyklcre5xi6tl" path="res://Theme/Theme_Large_Medium_Font.tres" id="3"]
[ext_resource type="StyleBox" uid="uid://dm8hlq85fctfk" path="res://Summary Panel Cont.tres" id="4"]
[ext_resource type="PackedScene" uid="uid://bpyvdwd3ehv8x" path="res://Resource Gained Summary.tscn" id="5"]
[ext_resource type="Script" uid="uid://dqjuxvpc64x5r" path="res://SummaryMoneyPanel.gd" id="6"]
[ext_resource type="StyleBox" uid="uid://cg7spw14ksifo" path="res://Summary Panel Highlight.tres" id="7"]
[ext_resource type="PackedScene" uid="uid://dv47ipwa0yhh5" path="res://MoneyUI.tscn" id="8"]
[ext_resource type="Theme" uid="uid://f0mobaom23an" path="res://Theme/Theme_Large_Font.tres" id="9"]
[ext_resource type="PackedScene" uid="uid://qetgg583nnuo" path="res://CustomTweenComponent.tscn" id="10"]
[ext_resource type="Theme" uid="uid://ulae55bx0fhs" path="res://Theme/Theme_Small_Font.tres" id="11"]
[ext_resource type="PackedScene" uid="uid://bdx0x3ukekrxv" path="res://SummaryScreenStat.tscn" id="12"]
[ext_resource type="PackedScene" uid="uid://ds36c3qoqmf3y" path="res://Controller Glyph.tscn" id="13"]
[ext_resource type="Script" uid="uid://c36s4gjs5sv4r" path="res://addons/controller_icons/objects/ControllerIconTexture.gd" id="14"]
[ext_resource type="PackedScene" uid="uid://b5w1afldacdb1" path="res://CustomButton.tscn" id="15"]
[ext_resource type="AudioStream" uid="uid://dj2hhiixhjmj8" path="res://Audio/zapsplat_cartoon_orchestral_musical_tone_ta_da_reveal_103156.mp3" id="16"]
[ext_resource type="AudioStream" uid="uid://bjexi312ga1n5" path="res://Audio/sound_ex_machina_Button_Tick_Loop.mp3" id="17"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6hfdf"]
bg_color = Color(0.443137, 0.443137, 0.45098, 1)
border_color = Color(0.3234, 0.3234, 0.33, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_amaeo"]
bg_color = Color(0.3234, 0.3234, 0.33, 1)
border_color = Color(0.443137, 0.443137, 0.45098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_t0k5i"]
content_margin_left = 4.0
content_margin_top = 0.0
content_margin_right = 4.0
content_margin_bottom = 0.0
color = Color(0.443137, 0.443137, 0.45098, 1)
thickness = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j236x"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c3hmd"]
bg_color = Color(0.686, 0.686, 0.7, 1)
border_color = Color(0.443137, 0.443137, 0.45098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Texture2D" id="Texture2D_amaeo"]
script = ExtResource("14")
path = "upgrades"
custom_label_settings = null
metadata/_custom_type_script = "uid://c36s4gjs5sv4r"

[sub_resource type="Texture2D" id="Texture2D_udlqx"]
script = ExtResource("14")
path = "go again"
custom_label_settings = null
metadata/_custom_type_script = "uid://c36s4gjs5sv4r"

[node name="End of Run Summary" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.627451)
script = ExtResource("1")
metadata/_edit_lock_ = true

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Black Hole Size" type="Label" parent="MarginContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2")
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 4
text = "Baby Black Hole"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3
uppercase = true

[node name="Vbox" type="VBoxContainer" parent="MarginContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50
alignment = 2

[node name="Size Vbox" type="VBoxContainer" parent="MarginContainer3/VBoxContainer/Vbox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="BlackHoleMassUI" type="ProgressBar" parent="MarginContainer3/VBoxContainer/Vbox/Size Vbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_6hfdf")
theme_override_styles/fill = SubResource("StyleBoxFlat_amaeo")
value = 38.96
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer3/VBoxContainer/Vbox/Size Vbox/BlackHoleMassUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Size2" type="Label" parent="MarginContainer3/VBoxContainer/Vbox/Size Vbox/BlackHoleMassUI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3")
text = "Size"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Size" type="Label" parent="MarginContainer3/VBoxContainer/Vbox/Size Vbox/BlackHoleMassUI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3")
text = "#/#"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer3/VBoxContainer/Vbox"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Money Stuff" type="PanelContainer" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer"]
custom_minimum_size = Vector2(330, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = ExtResource("4")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Asteroid" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer" instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 2

[node name="Planet" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer" instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 2

[node name="Star" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer" instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 2

[node name="Total" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer" instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 2
is_total = true

[node name="HSeparator2" type="HSeparator" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_t0k5i")

[node name="Money UI Panel" type="PanelContainer" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j236x")
script = ExtResource("6")
normal_panel = SubResource("StyleBoxFlat_j236x")
highlight_panel = ExtResource("7")

[node name="Moeny UI" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2/Money UI Panel" instance=ExtResource("8")]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("9")
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="CustomTweenComponent" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2/Money UI Panel" node_paths=PackedStringArray("base_node") instance=ExtResource("10")]
unique_name_in_owner = true
base_node = NodePath("..")
duration = 0.2
do_scale = true
scale_amount = Vector2(1.05, 1.05)

[node name="ToolTip" type="Control" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2/Money UI Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2/Money UI Panel/ToolTip"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/margin_bottom = 5

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2/Money UI Panel/ToolTip/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c3hmd")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2/Money UI Panel/ToolTip/MarginContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Text" type="Label" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2/Money UI Panel/ToolTip/MarginContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("11")
text = "CURRENT_MONEY"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer"]
custom_minimum_size = Vector2(330, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("4")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "STATS"
horizontal_alignment = 1

[node name="Stats" type="GridContainer" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="Star Supernova Damage" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Stats" instance=ExtResource("12")]
unique_name_in_owner = true
layout_mode = 2

[node name="Star Laser Damage" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Stats" instance=ExtResource("12")]
unique_name_in_owner = true
layout_mode = 2

[node name="Star Electric Damage" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Stats" instance=ExtResource("12")]
unique_name_in_owner = true
layout_mode = 2

[node name="Money From Glolden Asteroids" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Stats" instance=ExtResource("12")]
unique_name_in_owner = true
layout_mode = 2

[node name="Electric Damage Hbox" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Stats" instance=ExtResource("12")]
unique_name_in_owner = true
layout_mode = 2

[node name="Breaker Damage Hbox" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Stats" instance=ExtResource("12")]
unique_name_in_owner = true
layout_mode = 2

[node name="Breaker Crit Damage" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Stats" instance=ExtResource("12")]
unique_name_in_owner = true
layout_mode = 2

[node name="Breaker Clicks" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Stats" instance=ExtResource("12")]
unique_name_in_owner = true
layout_mode = 2

[node name="Manual Clicks" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Stats" instance=ExtResource("12")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_t0k5i")

[node name="Stats2" type="GridContainer" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="Stars Destroyed Hbox3" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Stats2" instance=ExtResource("12")]
unique_name_in_owner = true
layout_mode = 2

[node name="Planets Destroyed Hbox2" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Stats2" instance=ExtResource("12")]
unique_name_in_owner = true
layout_mode = 2

[node name="Moons Collected" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Stats2" instance=ExtResource("12")]
unique_name_in_owner = true
layout_mode = 2

[node name="Comets Collected" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Stats2" instance=ExtResource("12")]
unique_name_in_owner = true
layout_mode = 2

[node name="Asteroids Destroyed Hbox" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Stats2" instance=ExtResource("12")]
unique_name_in_owner = true
layout_mode = 2

[node name="Time Added Hbox" parent="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Stats2" instance=ExtResource("12")]
unique_name_in_owner = true
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="MarginContainer3/VBoxContainer/Vbox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer3/VBoxContainer/Vbox/Buttons"]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = ExtResource("4")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer3/VBoxContainer/Vbox/Buttons/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Button Hbox" type="VBoxContainer" parent="MarginContainer3/VBoxContainer/Vbox/Buttons/PanelContainer2/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer3/VBoxContainer/Vbox/Buttons/PanelContainer2/MarginContainer/Button Hbox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Controller Glyph" parent="MarginContainer3/VBoxContainer/Vbox/Buttons/PanelContainer2/MarginContainer/Button Hbox/HBoxContainer" instance=ExtResource("13")]
layout_mode = 2
texture = SubResource("Texture2D_amaeo")
always_show = true
enabled = false

[node name="Upgrades" parent="MarginContainer3/VBoxContainer/Vbox/Buttons/PanelContainer2/MarginContainer/Button Hbox/HBoxContainer" instance=ExtResource("15")]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 57)
layout_mode = 2
size_flags_horizontal = 7
focus_neighbor_right = NodePath("../../HBoxContainer2/Go Again")
theme_override_font_sizes/font_size = 32

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer3/VBoxContainer/Vbox/Buttons/PanelContainer2/MarginContainer/Button Hbox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Controller Glyph" parent="MarginContainer3/VBoxContainer/Vbox/Buttons/PanelContainer2/MarginContainer/Button Hbox/HBoxContainer2" instance=ExtResource("13")]
layout_mode = 2
texture = SubResource("Texture2D_udlqx")
always_show = true
enabled = false

[node name="Go Again" parent="MarginContainer3/VBoxContainer/Vbox/Buttons/PanelContainer2/MarginContainer/Button Hbox/HBoxContainer2" instance=ExtResource("15")]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 57)
layout_mode = 2
size_flags_horizontal = 7
focus_neighbor_left = NodePath("../../HBoxContainer/Upgrades")
theme_override_font_sizes/font_size = 32
text = "CONTINUE"

[node name="TaDa Audio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("16")
volume_db = -15.0
bus = &"Effects"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("17")
volume_db = -15.0
bus = &"Effects"

[connection signal="mouse_entered" from="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2/Money UI Panel" to="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2/Money UI Panel" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2/Money UI Panel" to="MarginContainer3/VBoxContainer/Vbox/HBoxContainer/Money Stuff/MarginContainer/VBoxContainer2/Money UI Panel" method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer3/VBoxContainer/Vbox/Buttons/PanelContainer2/MarginContainer/Button Hbox/HBoxContainer/Upgrades" to="." method="_on_upgrades_pressed"]
[connection signal="pressed" from="MarginContainer3/VBoxContainer/Vbox/Buttons/PanelContainer2/MarginContainer/Button Hbox/HBoxContainer2/Go Again" to="." method="_on_go_again_pressed"]
